# sim_ie

./: .gitignore  Cargo.toml  README..md  README.md  aaa.json
DOCS/: HOW_TO.md  README_DEV.md  ST2150-C.ods
Historique/: 1127v0.1.0 du 25.08.2023.md  1127v0.2.0 du 16.09.2023.md  1127v0.2.1 du 18.09.2023.md  1127v0.3.0 du 25.09.2023.md  1127v0.4.0 du 15.01.2024 (Branche dd_help_code).md  1127v0.5.0 du 04.03.2024.md  aaa-1127v0.1.0 du 25.08.2023.json  aaa-1127v0.2.0 du 16.09.2023.json  aaa-1127v0.2.1 du 18.09.2023.json  aaa-1127v0.3.0 du 25.09.2023.json  aaa-1127v0.5.0 du 04.03.2024.json
src/: fake_serial_com.rs  main.rs  serial_com.rs
src/app_view/: infos.rs  input_infos.rs  message00.rs  message10.rs  messages.rs  mod.rs  show_infos.rs
src/context/: mod.rs
src/serial_com/: fake_serial_com.rs  mod.rs  true_serial_com.rs
src/st2150/: field.rs  frame.rs  mod.rs  protocol.rs  requete.rs
src/st2150/messages/: HOW_TO.md  helper_messages60_79.rs  message00.rs  message10.rs  message11.rs  message20.rs  message21.rs  message22.rs  message30.rs  message31.rs  message32.rs  message33.rs  message34.rs  message35.rs  message36.rs  message37.rs  message38.rs  message40.rs  message60.rs  message61.rs  message62.rs  message63.rs  message65.rs  message66.rs  message67.rs  message70.rs  message71.rs  message75.rs  message76.rs  message77.rs  message78.rs  mod.rs
