[package]
name = "sim_ie"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
iced = "0.10"
regex = "1.3"

[profile.release]
strip = true  # Automatically strip symboles from the binary
lto = true  # Enable link time optimization
codegen-units = 1  # Maximize size reduction optimizations
